# UMA-ROS2-MarkerProject

./: README.md
marker_detector_uma/: CMakeLists.txt  package.xml
marker_detector_uma/calibration/: huaweip40_N_1280x720.yml  huaweip40_N_1440x720.yml  huaweip40_N_1920x1080.yml  huaweip40_N_2048x1536.yml  huaweip40_N_3840x2160.yml  huaweip40_N_720x720.yml  huaweip40_W_1280x720.yml  huaweip40_W_1440x720.yml  huaweip40_W_1920x1080.yml  huaweip40_W_2048x1536.yml  huaweip40_W_3840x2160.yml  huaweip40_W_720x720.yml  pixel7_1280x720.yml  pixel7_1280x960.yml  pixel7_1920x1080.yml  pixel7_2048x1536.yml  pixel7_3840x2160.yml  pixel7_800x600.yml
marker_detector_uma/src/: ArucoProcessor.cpp  GP7FractalProcessor.cpp  HP40FractalProcessor.cpp
marker_manager_uma/: package.xml  setup.cfg  setup.py
marker_manager_uma/marker_manager_uma/: AgentTracker.py  BatteryTracker.py  DataCollector.py  DataProcessor.py  DataViewer.py  DistanceCalculator.py  DistanceCollector.py  PoseCalculator.py  PoseCollector.py  PosePlotter.py  PosePredictor.py  PredictedPoseCollector.py  PredictedPosePlotter.py  ProcessedImageViewer.py  RawImageViewer.py  ReducedImageViewer.py  ResolutionReducer.py  UTMConverter.py
sh_files/: LaunchArchitectureP40.sh  LaunchArchitectureP7.sh  LaunchRenamedArchitectureP40.sh  LaunchRenamedArchitectureP7.sh  ResetArucoID.sh  SetCameraP40.sh  SetCameraP7.sh
